--- a/app/src/main/res/layout/add_button_list.xml
+++ b/app/src/main/res/layout/add_button_list.xml
@@ -10,7 +10,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:backgroundTint="@color/design_default_color_background"
+        android:backgroundTint="@color/cardview_dark_background"
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp">
 
@@ -37,7 +37,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:textColor="@color/black"
+                android:textColor="@color/cardview_light_background"
                 android:textSize="20sp" />
         </LinearLayout>
 
