--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -7,12 +7,14 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
-        android:layout_width="310dp"
+        android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:backgroundTint="@color/design_default_color_background"
         app:cardCornerRadius="15dp"
-        app:cardElevation="5dp">
+        app:cardElevation="5dp"
+        app:cardPreventCornerOverlap="true"
+        app:cardBackgroundColor="@color/cardview_dark_background">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -30,12 +32,12 @@
 
             <TextView
                 android:id="@+id/NameText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
-                android:textColor="@color/white"
+                android:textColor="@color/cardview_light_background"
                 android:textSize="20sp" />
         </LinearLayout>
 
