--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.category.CreateCategoryFragment">
+    tools:context=".ui.category.createCategory.CreateCategoryFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
