--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,6 +9,10 @@
             android:icon="@drawable/ic_menu_camera"
             android:title="@string/menu_start" />
         <item
+            android:id="@+id/nav_account"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="@string/menu_account" />
+        <item
             android:id="@+id/nav_category"
             android:icon="@drawable/ic_menu_gallery"
             android:title="@string/menu_category" />
@@ -16,13 +20,5 @@
             android:id="@+id/nav_graph"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="@string/menu_graphs" />
-        <item
-            android:id="@+id/nav_habitualPayments"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_habitualPayments" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_settings" />
     </group>
 </menu>
