--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,45 +1,68 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.account.AccountFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
+        <!-- Título del Total -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="40dp"
-            android:text="@string/total"/>
+            android:layout_marginTop="24dp"
+            android:text="@string/total"
+            android:textSize="18sp"
+            android:textStyle="bold"/>
 
+        <!-- Texto dinámico del Total -->
         <TextView
             android:id="@+id/TotalTextBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="20dp"/>
+            android:layout_marginTop="12dp"
+            android:textSize="16sp"
+            android:textColor="@color/black"/>
 
+        <!-- Botón de Transferencia -->
         <Button
+            android:id="@+id/transferButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="16dp"
             android:layout_gravity="center"
-            android:text="transferencia"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp">
+            android:text="@string/transfer"
+            android:backgroundTint="@color/black"
+            android:textColor="@color/white"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/AccountRecycler"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-        </ScrollView>
+        <!-- RecyclerView para la lista de cuentas -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/AccountRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="24dp"
+            android:layout_weight="1"/>
     </LinearLayout>
 
+    <!-- Floating Action Button para agregar nueva cuenta -->
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fabAddAccount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"
+            android:src="@android:drawable/ic_input_add"
+            android:tint="@color/white" />
+    </androidx.appcompat.widget.Toolbar>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
