--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,7 +17,6 @@
         android:label="@string/menu_category"
         tools:layout="@layout/fragment_category">
 
-        <!-- Acción para navegar de CategoryFragment a CreateCategoryFragment -->
         <action
             android:id="@+id/action_categoryFragment_to_createCategoryFragment"
             app:destination="@id/nav_createCategory" />
@@ -33,11 +32,21 @@
         android:id="@+id/nav_account"
         android:name="com.example.tfg_aplicaciongastos.ui.account.AccountFragment"
         android:label="@string/menu_account"
-        tools:layout="@layout/fragment_account" />
+        tools:layout="@layout/fragment_account">
+        <action
+            android:id="@+id/action_accountFragment_to_createAccountFragment"
+            app:destination="@id/nav_createCategory" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_createCategory"
         android:name="com.example.tfg_aplicaciongastos.ui.category.createCategory.CreateCategoryFragment"
         android:label="@string/add_category"
         tools:layout="@layout/fragment_create_category" />
+
+    <fragment
+        android:id="@+id/nav_createAccount"
+        android:name="com.example.tfg_aplicaciongastos.ui.account.createAccount.CreateAccount"
+        android:label="@string/add_Account"
+        tools:layout="@layout/activity_create_account" />
 </navigation>
