--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -30,39 +30,33 @@
             android:textSize="16sp"
             android:textColor="@color/black"/>
 
-        <!-- Botón de Transferencia -->
-        <Button
-            android:id="@+id/transferButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_gravity="center"
-            android:text="@string/transfer"
-            android:backgroundTint="@color/black"
-            android:textColor="@color/white"/>
-
-        <!-- RecyclerView para la lista de cuentas -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/AccountRecycler"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginTop="24dp"
-            android:layout_weight="1"/>
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/AccountRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginTop="24dp"/>
+        </ScrollView>
     </LinearLayout>
 
-    <!-- Floating Action Button para agregar nueva cuenta -->
-    <androidx.appcompat.widget.Toolbar
+    <!-- Usar FrameLayout o RelativeLayout para la alineación del FAB -->
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
+        android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:contentDescription="@string/Add"
             android:src="@android:drawable/ic_input_add"
-            android:tint="@color/white" />
-    </androidx.appcompat.widget.Toolbar>
+            android:tint="@color/black" />
+    </FrameLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
