--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gris_feldespato">#4C6663</color>
+    <color name="dark_background">#263A27</color>
+    <color name="yellow">#FECB02</color>
+    <color name="green_icon">#76C893</color>
+    <color name="red_icon">#E76F51</color>
 </resources>
