Finalizacion Back Category y arreglo warnings back

--- a/app/src/main/res/layout/fragment_create_category.xml
+++ b/app/src/main/res/layout/fragment_create_category.xml
@@ -16,8 +16,11 @@
             android:text="@string/name" />
 
         <EditText
+            android:id="@+id/categoryNameEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:hint="@string/category_name"
+            android:minHeight="48dp" />
 
 
         <RadioGroup
@@ -51,6 +54,12 @@
             android:layout_height="200dp"
             android:layout_marginTop="16dp"
             android:background="#FFFFFF" />
+
+        <Button
+            android:id="@+id/createCategoryButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Add"/>
 
     </LinearLayout>
 
