--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -6,41 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.category.CategoryFragment">
 
-
-    <!-- Botón para mostrar el primer RecyclerView -->
-    <Button
-        android:id="@+id/buttonFirstRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="First List"
-        app:layout_constraintEnd_toStartOf="@id/buttonSecondRecyclerView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Botón para mostrar el segundo RecyclerView -->
-    <Button
-        android:id="@+id/buttonSecondRecyclerView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:text="Second List"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/buttonFirstRecyclerView"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <!-- Contenedor para los fragmentos -->
-    <FrameLayout
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/buttonFirstRecyclerView">
-
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginTop="40dp">
 
             <androidx.recyclerview.widget.RecyclerView
@@ -52,5 +20,4 @@
             </androidx.recyclerview.widget.RecyclerView>
 
         </ScrollView>
-    </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
