--- a/app/src/main/res/layout/account_list.xml
+++ b/app/src/main/res/layout/account_list.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/cardview_dark_background"
     app:cardCornerRadius="15dp"
-    app:cardElevation="6dp"
-    app:cardBackgroundColor="@color/cardview_dark_background">
+    app:cardElevation="6dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,11 +20,11 @@
             android:id="@+id/selectedTick"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
+            android:layout_marginEnd="8dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_menu_camera"
-            android:visibility="gone"
-            android:layout_marginEnd="8dp" />
+            android:visibility="gone" />
 
         <!-- Nombre de la cuenta -->
         <TextView
@@ -35,8 +34,8 @@
             android:layout_weight="7"
             android:gravity="center_vertical"
             android:text="Nombre de la cuenta"
-            android:textSize="18sp"
             android:textColor="@color/cardview_light_background"
+            android:textSize="18sp"
             android:textStyle="bold" />
 
         <!-- Total de la cuenta -->
@@ -47,7 +46,7 @@
             android:layout_weight="2"
             android:gravity="center_vertical|end"
             android:text="Total: 0.00 €"
-            android:textSize="16sp"
-            android:textColor="@color/cardview_light_background" />
+            android:textColor="@color/cardview_light_background"
+            android:textSize="16sp" />
     </LinearLayout>
 </androidx.cardview.widget.CardView>
