--- a/app/src/main/res/layout/add_button_list.xml
+++ b/app/src/main/res/layout/add_button_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardViewButton"
@@ -25,18 +24,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:src="@drawable/add_button"
-                android:contentDescription="@string/Add" />
+                android:contentDescription="@string/Add"
+                android:src="@drawable/add_button" />
 
             <TextView
                 android:id="@+id/AddButtonText"
-                android:text="@string/add_category"
-                android:textAlignment="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="10dp"
+                android:text="@string/add_category"
+                android:textAlignment="center"
                 android:textColor="@color/cardview_light_background"
                 android:textSize="20sp" />
         </LinearLayout>
