--- a/app/src/main/res/layout/category_list.xml
+++ b/app/src/main/res/layout/category_list.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -11,10 +10,10 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:backgroundTint="@color/design_default_color_background"
+        app:cardBackgroundColor="@color/cardview_dark_background"
         app:cardCornerRadius="15dp"
         app:cardElevation="5dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardBackgroundColor="@color/cardview_dark_background">
+        app:cardPreventCornerOverlap="true">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,8 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:src="@drawable/ic_launcher_foreground"
-                android:contentDescription="@string/Color" />
+                android:contentDescription="@string/Color"
+                android:src="@drawable/ic_launcher_foreground" />
 
             <TextView
                 android:id="@+id/NameText"
