--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="24dp"
             android:text="@string/total"
             android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <!-- Texto dinámico del Total -->
         <TextView
@@ -27,8 +27,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="12dp"
-            android:textSize="16sp"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            android:textSize="16sp" />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -38,7 +38,7 @@
                 android:id="@+id/AccountRecycler"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="24dp"/>
+                android:layout_marginTop="24dp" />
         </ScrollView>
     </LinearLayout>
 
