--- a/app/src/main/res/layout/fragment_category_tabs.xml
+++ b/app/src/main/res/layout/fragment_category_tabs.xml
@@ -11,15 +11,15 @@
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabMode="fixed"
+        app:layout_constraintTop_toTopOf="parent"
         app:tabGravity="fill"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:tabMode="fixed" />
 
     <!-- ViewPager2 para manejar los fragmentos de cada tab -->
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/tabLayout"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tabLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
