--- a/app/src/main/res/menu/account_context_menu.xml
+++ b/app/src/main/res/menu/account_context_menu.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-        <item
-            android:id="@+id/menu_edit"
-            android:title="@string/edit"
-            android:icon="@drawable/edit_icon"
-            android:iconTint="@color/black"/>
-        <item
-            android:id="@+id/menu_delete"
-            android:title="@string/delete"
-            android:icon="@drawable/delete_icon"
-            android:iconTint="@color/black"/>
+    <item
+        android:id="@+id/menu_edit"
+        android:icon="@drawable/edit_icon"
+        android:iconTint="@color/black"
+        android:title="@string/edit" />
+    <item
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/delete_icon"
+        android:iconTint="@color/black"
+        android:title="@string/delete" />
 
 </menu>
