--- a/app/src/main/res/drawable/add_button.xml
+++ b/app/src/main/res/drawable/add_button.xml
@@ -1,22 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Fondo amarillo circular -->
+
     <item>
         <shape android:shape="oval">
-            <solid android:color="#e8ce29" /> <!-- Color amarillo -->
+            <solid android:color="@color/helecho_verde" />
             <size
                 android:width="100dp"
-                android:height="100dp" /> <!-- Tamaño del círculo -->
+                android:height="100dp" />
         </shape>
     </item>
 
-    <!-- Símbolo + blanco -->
     <item>
         <bitmap
             android:gravity="center"
             android:src="@android:drawable/ic_input_add"
-            android:tint="@android:color/white" /> <!-- El + en color blanco -->
+            android:tint="@android:color/white" />
     </item>
 
 </layer-list>
