--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,6 @@
     <color name="yellow">#FECB02</color>
     <color name="green_icon">#76C893</color>
     <color name="red_icon">#E76F51</color>
+    <color name="pakistani_green">#1E3F20</color>
+    <color name="helecho_verde">#4A7856</color>
 </resources>
