--- a/app/src/main/res/drawable/border_selected.xml
+++ b/app/src/main/res/drawable/border_selected.xml
@@ -7,7 +7,7 @@
     </item>
     <item>
         <shape android:shape="rectangle">
-            <stroke android:width="4dp" android:color="@android:color/holo_orange_light" />
+            <stroke android:width="4dp" android:color="@color/helecho_verde" />
             <corners android:radius="15dp" />
         </shape>
     </item>
