--- a/app/src/main/res/layout/add_button_list.xml
+++ b/app/src/main/res/layout/add_button_list.xml
@@ -1,46 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardViewButton"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_margin="2dp"
+    app:cardBackgroundColor="@color/cardview_dark_background"
+    app:cardCornerRadius="15dp"
+    app:cardElevation="5dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewButton"
-        android:layout_width="180dp"
+    <LinearLayout
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/cardview_dark_background"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="5dp">
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:ignore="UseCompoundDrawables">
 
-        <LinearLayout
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:contentDescription="@string/Add"
+            android:src="@drawable/add_button" />
+
+        <TextView
+            android:id="@+id/AddButtonText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/add_category"
+            android:textAlignment="center"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="20sp" />
+    </LinearLayout>
 
+</com.google.android.material.card.MaterialCardView>
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:contentDescription="@string/Add"
-                android:src="@drawable/add_button" />
-
-            <TextView
-                android:id="@+id/AddButtonText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="10dp"
-                android:text="@string/add_category"
-                android:textAlignment="center"
-                android:textColor="@color/cardview_light_background"
-                android:textSize="20sp" />
-        </LinearLayout>
-
-
-    </androidx.cardview.widget.CardView>
-
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
