--- a/app/src/main/res/layout/category_select_list.xml
+++ b/app/src/main/res/layout/category_select_list.xml
@@ -1,35 +1,34 @@
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/categoryCard"
-    android:layout_width="155dp"
-    android:layout_height="192dp"
+    android:layout_width="125dp"
+    android:layout_height="180dp"
     android:layout_margin="10dp"
-    app:cardElevation="5dp"
-    app:cardCornerRadius="15dp">
+    app:cardCornerRadius="15dp"
+    app:cardElevation="5dp">
 
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:gravity="center"
-android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
+        tools:ignore="UseCompoundDrawables">
 
-<ImageView
-    android:id="@+id/colorImageView"
-    android:layout_width="100dp"
-    android:layout_height="100dp"
-    android:layout_margin="10dp"
-    android:background="@drawable/circle_background"
-    android:contentDescription="@string/Color" />
+        <ImageView
+            android:id="@+id/colorImageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:background="@drawable/circle_background"
+            android:contentDescription="@string/Color"
+            tools:ignore="ImageContrastCheck" />
 
-<TextView
-    android:id="@+id/categoryName"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginStart="10dp"
-    android:layout_marginTop="20dp"
-    android:layout_marginEnd="10dp"
-    android:textColor="@color/cardview_light_background"
-    android:textSize="20sp" />
-</LinearLayout>
+        <TextView
+            android:id="@+id/categoryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="20sp" />
+    </LinearLayout>
 </com.google.android.material.card.MaterialCardView>
