--- a/app/src/main/res/layout/create_exchange_fragment.xml
+++ b/app/src/main/res/layout/create_exchange_fragment.xml
@@ -1,101 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="16dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/name" />
-
-    <EditText
-        android:id="@+id/exchangeNameEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/Exchange_name"
-        android:minHeight="48dp" />
-
-
-    <RadioGroup
-        android:id="@+id/radioButtonGroupExchangeType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <RadioButton
-            android:id="@+id/radioButtonGastos"
+        <!-- Título -->
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/gastos" />
+            android:layout_marginBottom="8dp"
+            android:text="@string/name"
+            android:textSize="18sp" />
 
-        <RadioButton
-            android:id="@+id/radioButtonIngresos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/ingresos" />
-    </RadioGroup>
-
-        <ScrollView
+        <!-- Campo de texto para el nombre -->
+        <EditText
+            android:id="@+id/exchangeNameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="40dp">
+            android:layout_marginBottom="16dp"
+            android:hint="@string/Exchange_name"
+            android:minHeight="48dp"
+            android:padding="8dp" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/CategoryRecycler"
-                android:layout_width="match_parent"
+        <!-- Grupo de botones para seleccionar tipo -->
+        <RadioGroup
+            android:id="@+id/radioButtonGroupExchangeType"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:orientation="horizontal">
+
+            <RadioButton
+                android:id="@+id/radioButtonGastos"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="20dp"/>
+                android:text="@string/gastos" />
+
+            <RadioButton
+                android:id="@+id/radioButtonIngresos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:text="@string/ingresos" />
+        </RadioGroup>
+
+        <!-- Lista de categorías -->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:text="@string/select_category"
+            android:textSize="16sp" />
 
 
-        </ScrollView>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/CategoryRecycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border_recyclerview" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="20dp">
+            android:layout_marginBottom="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/exchangeDateEditText"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:hint="@string/select_date"
-                android:focusable="false"
                 android:clickable="true"
-                android:minHeight="48dp"/>
+                android:focusable="false"
+                android:hint="@string/select_date"
+                android:minHeight="48dp"
+                android:padding="8dp" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/datePickerButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src = "@drawable/calendar"
-                android:text="@string/select_date"/>
+                android:layout_width="60dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:background="@drawable/rounded_button"
+                android:backgroundTint="@color/helecho_verde"
+                android:scaleType="fitCenter"
+                android:src="@drawable/calendar" />
         </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/total" />
+                android:layout_marginEnd="16dp"
+                android:text="@string/total"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/totalAmountEditText"
-                android:layout_width="200dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-
+                android:layout_weight="1"
                 android:hint="@string/total"
-                android:inputType="numberDecimal" />
+                android:inputType="numberDecimal"
+                android:padding="8dp" />
+        </LinearLayout>
 
-        <Button
+        <ImageButton
             android:id="@+id/createExchangeButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Add_exchange" />
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_marginTop="24dp"
+            android:background="@drawable/circle_background"
+            android:backgroundTint="@color/helecho_verde"
+            android:contentDescription="@string/Add_exchange"
+            android:elevation="4dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/tick" />
 
     </LinearLayout>
 </FrameLayout>
