--- a/app/src/main/res/layout/exchanges_list.xml
+++ b/app/src/main/res/layout/exchanges_list.xml
@@ -15,7 +15,6 @@
         android:padding="16dp"
         android:weightSum="10">
 
-        <!-- Icono de selección (Círculo) -->
         <View
             android:id="@+id/selectionCircle"
             android:layout_width="25dp"
@@ -26,26 +25,22 @@
             android:background="@drawable/circle_background"
             android:visibility="visible" />
 
-        <!-- Contenedor de texto -->
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="7"
             android:orientation="vertical">
 
-            <!-- Nombre del gasto/ingreso -->
             <TextView
                 android:id="@+id/accountName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_marginEnd="8dp"
-                android:text="Nombre"
+                android:gravity="center_vertical"
                 android:textColor="@color/cardview_light_background"
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <!-- Categoría y porcentaje en la misma fila -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,28 +48,16 @@
 
                 <TextView
                     android:id="@+id/categoryName"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_weight="8"
                     android:gravity="center_vertical"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Categoría"
                     android:textColor="@color/cardview_light_background"
                     android:textSize="14sp" />
             </LinearLayout>
         </LinearLayout>
-        <TextView
-            android:id="@+id/categoryPercentage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:gravity="center|end"
-            android:layout_marginEnd="8dp"
-            android:text="29%"
-            android:textAlignment="center"
-            android:textColor="@android:color/darker_gray"
-            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/accountTotal"
@@ -82,7 +65,6 @@
             android:layout_height="53dp"
             android:layout_weight="2"
             android:gravity="center_vertical|end"
-            android:text="20.00 €"
             android:textColor="@color/cardview_light_background"
             android:textSize="16sp" />
 
