--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,62 +1,60 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.account.AccountFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="16dp">
 
-        <!-- Título del Total -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="24dp"
             android:text="@string/total"
-            android:textSize="18sp"
+            android:textColor="@color/black"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
-        <!-- Texto dinámico del Total -->
         <TextView
             android:id="@+id/TotalTextBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="15dp"
             android:textColor="@color/black"
-            android:textSize="16sp" />
+            android:textSize="24sp"
+            android:textStyle="bold"/>
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/AccountRecycler"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="24dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
+                android:background="@drawable/border_recyclerview"/>
         </ScrollView>
     </LinearLayout>
 
-    <!-- Usar FrameLayout o RelativeLayout para la alineación del FAB -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fabAddAccount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
+            android:layout_gravity="bottom|center"
+            android:layout_marginBottom="30dp"
             android:contentDescription="@string/Add"
             android:src="@android:drawable/ic_input_add"
-            android:tint="@color/black" />
-    </FrameLayout>
+            android:tint="@color/white" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
