--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,19 +6,15 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_start"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/payments"
             android:title="@string/menu_start" />
         <item
             android:id="@+id/nav_account"
-            android:icon="@drawable/ic_menu_slideshow"
+            android:icon="@drawable/accounts"
             android:title="@string/menu_account" />
         <item
             android:id="@+id/nav_category"
-            android:icon="@drawable/ic_menu_gallery"
+            android:icon="@drawable/categories"
             android:title="@string/menu_category" />
-        <item
-            android:id="@+id/nav_graph"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_graphs" />
     </group>
 </menu>
