--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,10 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.TFGAplicacionGastos" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/dark_background</item>
+        <item name="colorPrimary">@color/helecho_verde</item>
         <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/yellow</item>
-        <item name="colorOnSecondary">@color/gris_feldespato</item>
+        <item name="colorSecondary">@color/helecho_verde</item>
+        <item name="colorOnSecondary">@color/white</item>
         <item name="android:windowBackground">@color/gris_feldespato</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
